cdbfapiSharp/CDBFapi.cs


        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void initLibrary(IntPtr handle, int magicNumber, string email);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool openDBFfile(IntPtr handle, string filename);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void closeDBFfile(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int recCount(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int fieldCount(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool getRecord(IntPtr handle, int recno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool readRecord(IntPtr handle, int recno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool writeRecord(IntPtr handle, int recno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool readField(IntPtr handle, int recno, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool writeField(IntPtr handle, int recno, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int indexOfField(IntPtr handle, byte[] fieldname);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr getString(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int getData(IntPtr handle, int fieldno, out IntPtr data);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int getMemoBuf(IntPtr handle, int fieldno, out IntPtr data);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setMemoData(IntPtr handle, int fieldno, byte[] data, int len);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern double getValue(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern Int64 getTicks(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool isMemoField(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool isNumericField(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool isDateField(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool isCurrentDeleted(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool isDeleted(IntPtr handle, int recno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool clearRecord(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool clearField(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setFieldString(IntPtr handle, int fieldno, byte[] s);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setFieldDouble(IntPtr handle, int fieldno, double value);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setField(IntPtr handle, int fieldno, byte[] s, double value);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool markAsDeleted(IntPtr handle, int recno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool recallDeleted(IntPtr handle, int recno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool deleteRecord(IntPtr handle, int recno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool appendRecord(IntPtr handle, bool blankrecord);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool insertRecord(IntPtr handle, int recno, bool blankrecord);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setOrder(IntPtr handle, byte[] fieldlist);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setOrderA(IntPtr handle, string[] fields);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void unsetOrder(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setFilter(IntPtr handle, byte[] expression);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void unsetFilter(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool pack(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool truncate(IntPtr handle, int recno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool zap(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int fileType(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int recordLength(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr driverName(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr fieldName(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int    fieldData(IntPtr handle, int fieldno, out IntPtr name);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern char fieldType(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int fieldLength(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern int fieldDecimal(IntPtr handle, int fieldno);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool prepareNewTable(IntPtr handle, int fileType);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool prepareNewTableX(IntPtr handle, int fileType, int memoSize, string driver);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void addField(IntPtr handle, string fieldname, char fieldType, int length);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void addFieldX(IntPtr handle, string fieldname, char fieldType, int length, int dec);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool createTable(IntPtr handle, string filename);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool createAndOpenTable(IntPtr handle, string filename);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setEncoding(IntPtr handle, int e);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setDateFormat(IntPtr handle, string format);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setDateDelimiter(IntPtr handle, char delimiter);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern bool isReadOnly(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void setReadOnly(IntPtr handle, bool value);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void descendingMode(IntPtr handle, bool descending);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern void caseSensitiveMode(IntPtr handle, bool sensitive);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr filename(IntPtr handle);
        
        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr filenameMemo(IntPtr handle);

        [DllImport("cdbfapiPlus.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr lastUpdated(IntPtr handle);
